--- a/wp-content/themes/barberry/style.css
+++ b/wp-content/themes/barberry/style.css
@@ -1,6 +1,6 @@
 /*
 
-Theme Name: Barberry | Shared by WPTry.org
+Theme Name: Barberry
 Theme URI: http://barberry.temashdesign.com/
 Description: Barberry is premium WordPress and WooCommerce theme.
 Author: TemashDesign
